--- a/App/index.html
+++ b/App/index.html
@@ -2,12 +2,13 @@
    <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Automatización</title>
         <!--estilos-->
         <link rel="stylesheet" href="Public/css/style.css">
         <!--bootstrap-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="Lib/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="Lib/sweetalert.css">
         <!--angularjs-->
         <script src="Lib/angular.min.js"></script>   
         <!--angular ui router-->
@@ -44,7 +45,7 @@
        <!--sweet alert-->
        <script src="Lib/sweetalert.min.js"></script>
        <!--Bootstrap-->
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+       <script src="Lib/bootstrap.min.js" crossorigin="anonymous"></script>
 
     </body>
 </html>
