arreglo faded login y correccion estilos footer

--- a/App/index.html
+++ b/App/index.html
@@ -7,7 +7,7 @@
         <!--estilos-->
         <link rel="stylesheet" href="Public/css/style.css">
         <!--bootstrap-->
-        <link rel="stylesheet" href="Lib/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="Lib/bootstrap.min.css">
         <link rel="stylesheet" href="Lib/sweetalert.css">
         <!--angularjs-->
         <script src="Lib/angular.min.js"></script>   
@@ -42,10 +42,9 @@
        
        <!--jquery-->
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-       <!--sweet alert-->
-       <script src="Lib/sweetalert.min.js"></script>
        <!--Bootstrap-->
-       <script src="Lib/bootstrap.min.js" crossorigin="anonymous"></script>
-
+       <script src="Lib/bootstrap.min.js"></script>
+      <!--sweet alert-->
+       <script src="Lib/sweetalert.min.js"></script>
     </body>
 </html>
