Correcion de errores y añadida barra superior y estilos en pagina de inicio

--- a/App/index.html
+++ b/App/index.html
@@ -27,7 +27,7 @@
 
     </head>
     <body ng-app="autoautomatizacion">
-        <ui-view><p class="bg-danger">Si se muestra esto, hay un error!!...</p></ui-view>
+        <ui-view></ui-view>
               
        
        <footer class="footer-body" >
