icono de pestaña y arreglos register para movil

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="App/Public/img/icono_grande_color.png">
         <title>Automatización</title>
         <!--estilos-->
         <link rel="stylesheet" href="App/Public/css/style.css">
