cambio de los  datetime

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <link rel="stylesheet" href="App/Public/css/style.css">
         <!--bootstrap-->
         <link rel="stylesheet" href="App/Lib/bootstrap.min.css">
+        <!--SweetAlert-->
         <link rel="stylesheet" href="App/Lib/sweetalert.css">
+        <!--Datepicker-->
+        <link rel="stylesheet" href="App/Lib/datepicker/css/bootstrap-datepicker3.min.css">
+        <!--font-awesome--->
+        <link rel="stylesheet" href="App/Lib/font-awesome-4.6.3/css/font-awesome.min.css">
         <!--angularjs-->
         <script src="App/Lib/angular.min.js"></script>   
         <!--angular ui router-->
@@ -47,5 +52,8 @@
        <script src="App/Lib/bootstrap.min.js"></script>
       <!--sweet alert-->
        <script src="App/Lib/sweetalert.min.js"></script>
+       <!--Datepicker-->
+       <script src="App/Lib/datepicker/js/bootstrap-datepicker.min.js"></script>
+       <script src="App/Lib/datepicker/locales/bootstrap-datepicker.es.min.js"></script>
     </body>
 </html>
