--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <script src="App/app.concat.js"></script>
         <!--firebase-->
         <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
+        
         <script src="App/Public/js/firebase.js"></script>
         
         <!--<link rel="stylesheet" href="Public/css/app.css">-->
